--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,21 @@
 
 .display {
-	width: 137px;
-	height: 110px;
-	background-color:#54c8f2;
+	width: 127px;
+	height: 97px;
+	background-color:#b6d6e3;
 	float: left;
+border-top: 5px ridge rgb(24, 174, 234);
+  border-right: 5px ridge rgb(24, 174, 234);
+  border-bottom: 6px groove rgb(24, 174, 234);
+  border-left: 5px ridge rgb(24, 174, 234);
+  background:radial-gradient(ellipse at center, rgba(219,241,255,1) 0%, rgba(163,206,227,1) 79%, rgba(163,206,227,1) 100%);
+
 }
 .textarea {
 	width: 190px;
 }
 .number-buttons {
+
 	width: 8%;
 	text-align: center;
 	float: left;
