--- a/css/main.css
+++ b/css/main.css
@@ -35,3 +35,19 @@
 .clear {
 	clear: both;
 }
+
+.wallet {
+	margin-left: 2px;
+	margin-top:  100px;
+}
+
+.name-input {
+	margin-top: 5px;
+	display: none;
+}
+
+.new-card {
+	height: 200;
+	width: 300;
+	background-color: saddlebrown;
+}
