--- a/css/main.css
+++ b/css/main.css
@@ -110,9 +110,12 @@ p {
 }
 
 .new-card {
+	margin-top: 5px;
+	margin-left: 5px;
 	height: 200px;
 	width: 300px;
 	background-color: saddlebrown;
+	position: relative;
 }
 
 .ok-button {
