--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,14 @@ p {
 	font-size: 16px
 }
 
-
+#draggME {
+	background-color: red;
+	width: 200px;
+	height: 90px;
+	text-align: center;
+	line-height: 85px;
+	
+}
 
 
 
