--- a/css/main.css
+++ b/css/main.css
@@ -132,3 +132,19 @@ p {
     width: 110px;
     text-align: center;
 }
+
+table {
+	width:100%;
+	margin-top:18px;
+}
+tr {
+height:30px;
+}
+
+td:nth-child(2n) {
+	text-align:right;
+}
+
+td:nth-child(2n+1) {
+	text-align:left;
+}
