--- a/css/receiver.css
+++ b/css/receiver.css
@@ -17,10 +17,11 @@
     font-size: 16px
 }
 
-#draggME {
+/*#draggME {
     background-color: red;
     width: 200px;
     height: 90px;
     text-align: center;
     line-height: 85px;
 }
+*/
