--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,8 @@ p {
 	position: absolute;
 	left: 70%;
 	top: 60%;
-	width: 20%;
+	width: 30%;
+	height: auto;
 	text-align: left;
 }
 
@@ -116,6 +117,25 @@ p {
 	display: none;
 	margin-left: auto;
 	margin-top: 8px;
+
+}
+
+.bal-input {
+	display: none;
+	margin-left: auto;
+	margin-top: 5px;
+}
+
+.date-input {
+	display: none;
+	margin-left: auto;
+	margin-top: 5px;
+}
+
+.pin-input {
+	display: none;
+	margin-left: auto;
+	margin-top: 5px;
 }
 
 .new-card {
